Update Java version to 17 and modify build scripts
Changed source and target compatibility in build.gradle.kts to Java 17 from Java 21. Updated implementation dependencies and exclusion rules. Adjusted build scripts in build.sh to use the JDK 17 version. Updated domain record retrieval method in DDnsServiceImpl.java.